<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.educationaid.tutoring.RegistryActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblNameRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vorname"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtNameRegistry"
                app:layout_constraintStart_toStartOf="@+id/txtNameRegistry" />

            <EditText
                android:id="@+id/txtNameRegistry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginRight="54dp"

                android:layout_marginStart="54dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/max"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgProUser" />

            <TextView
                android:id="@+id/lblErrorNameRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registry_warning"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/txtNameRegistry"
                app:layout_constraintTop_toBottomOf="@+id/txtNameRegistry" />

            <TextView
                android:id="@+id/lblSurnameRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nachname"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtSurnameRegistry"
                app:layout_constraintStart_toStartOf="@+id/txtSurnameRegistry" />

            <EditText
                android:id="@+id/txtSurnameRegistry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginRight="54dp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/mustermann"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNameRegistry" />

            <TextView
                android:id="@+id/lblErrorSurnameRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registry_warning"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/txtSurnameRegistry"
                app:layout_constraintTop_toBottomOf="@+id/txtSurnameRegistry" />

            <TextView
                android:id="@+id/lblEmailRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtEmailRegistry"
                app:layout_constraintStart_toStartOf="@+id/txtEmailRegistry" />

            <EditText
                android:id="@+id/txtEmailRegistry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="54dp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSurnameRegistry" />

            <TextView
                android:id="@+id/lblErrorEmailRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registry_warning"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/txtEmailRegistry"
                app:layout_constraintTop_toBottomOf="@+id/txtEmailRegistry" />

            <TextView
                android:id="@+id/lblPasswordRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtPasswordRegistry"
                app:layout_constraintStart_toStartOf="@+id/txtPasswordRegistry" />

            <EditText
                android:id="@+id/txtPasswordRegistry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginRight="54dp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEmailRegistry" />

            <TextView
                android:id="@+id/lblErrorPasswordRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registry_warning"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/txtPasswordRegistry"
                app:layout_constraintTop_toBottomOf="@+id/txtPasswordRegistry" />

            <TextView
                android:id="@+id/lblPasswordconfRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_check"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtPasswordconfRegistry"
                app:layout_constraintStart_toStartOf="@+id/txtPasswordconfRegistry" />

            <EditText
                android:id="@+id/txtPasswordconfRegistry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginRight="54dp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPasswordRegistry" />

            <TextView
                android:id="@+id/lblErrorPasswordconfRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registry_warning"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/txtPasswordconfRegistry"
                app:layout_constraintTop_toBottomOf="@+id/txtPasswordconfRegistry" />

            <Button
                android:id="@+id/btnRegistry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="84dp"
                android:layout_marginEnd="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginRight="54dp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="48dp"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPasswordconfRegistry" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="98dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Licence Type"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btnLicenceInfo"
                app:layout_constraintStart_toStartOf="@+id/rgProUser"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rgProUser"
                android:layout_width="267dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:paddingLeft="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/rbFreeTutor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="Free"
                    android:textColorLink="@android:color/black" />

                <RadioButton
                    android:id="@+id/rbProTutor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Pro" />
            </RadioGroup>

            <ImageView
                android:id="@+id/btnLicenceInfo"
                android:layout_width="16dp"
                android:layout_height="20dp"
                android:layout_marginEnd="176dp"
                android:layout_marginRight="176dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_info_outline_black_16dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
