...

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_tutor"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        tools:text="@string/not_a_tutor" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
...
